aggiunta struttura pagina, nav, e prototipo primo div scarpa

--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <title>Scarpe sportive alla moda</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#shoe-1">1</a></li>
+                <li><a href="#shoe-2">2</a></li>
+                <li><a href="#shoe-3">3</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="shoe s1">
+            <div class="content">
+                <img src="img/01.png" alt="">
+                <div class="description">
+                    Il nostro modello di punta
+                </div>
+            </div>
+        </div>
+        <div class="shoe s2">
+
+        </div>
+        <div class="shoe s3">
+
+        </div>
+    </main>
 </body>
 </html>
