aggiunti id e link

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#shoe-1">1</a></li>
-                <li><a href="#shoe-2">2</a></li>
-                <li><a href="#shoe-3">3</a></li>
+                <li><a href="#s1">1</a></li>
+                <li><a href="#s2">2</a></li>
+                <li><a href="#s3">3</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div class="shoe s1">
+        <div class="shoe" id="s1">
             <div class="content">
                 <img src="img/01.png" alt="">
                 <div class="description">
@@ -30,11 +30,21 @@
                 </div>
             </div>
         </div>
-        <div class="shoe s2">
-
+        <div class="shoe" id="s2">
+            <div class="content">
+                <img src="img/02.png" alt="">
+                <div class="description">
+                    Il nostro modello di punta
+                </div>
+            </div>
         </div>
-        <div class="shoe s3">
-
+        <div class="shoe" id="s3">
+            <div class="content">
+                <img src="img/03.png" alt="">
+                <div class="description">
+                    Il nostro modello di punta
+                </div>
+            </div>
         </div>
     </main>
 </body>
