aggiunti commenti, cambiato font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>Scarpe sportive alla moda</title>
 </head>
 <body>
@@ -30,22 +30,25 @@
                 </div>
             </div>
         </div>
+        
         <div class="shoe" id="s2">
             <div class="content">
                 <img src="img/02.png" alt="">
                 <div class="description">
-                    Il nostro modello di punta
+                    Il nostro modello di tacco
                 </div>
             </div>
         </div>
+
         <div class="shoe" id="s3">
             <div class="content">
                 <img src="img/03.png" alt="">
                 <div class="description">
-                    Il nostro modello di punta
+                    Il nostro modello di suola
                 </div>
             </div>
         </div>
+
     </main>
 </body>
 </html>
